cmake_minimum_required(VERSION 3.11)
project(app)
add_executable(main main.cpp)
set_property(TARGET main PROPERTY CXX_STANDARD 20)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT main)

find_package(assimp CONFIG REQUIRED)
target_link_libraries(main PRIVATE assimp::assimp)
find_package(glad CONFIG REQUIRED)
target_link_libraries(main PRIVATE glad::glad)
find_package(glm CONFIG REQUIRED)
target_link_libraries(main PRIVATE glm::glm-header-only)
find_package(Stb REQUIRED)
target_include_directories(main PRIVATE ${Stb_INCLUDE_DIR})
find_package(glfw3 CONFIG REQUIRED)
target_link_libraries(main PRIVATE glfw)
